--- a/Messages.toml
+++ b/Messages.toml
@@ -236,7 +236,7 @@ fields = [
 	{ map="ot", ts="ot", pretty="Ot", type="bool" },
 ]
 
-# Notifications
+# Server to Client notifications
 [[msg_group]]
 default = { s2c=true, c2s=false, response=false, low=false, np=false }
 msg = [
@@ -254,6 +254,7 @@ msg = [
 	{ name="ClientChannelGroupChanged", notify="notifyclientchannelgroupchanged", attributes=["invokerid", "invokername", "cgid", "cgi", "cid", "clid"] },
 	{ name="ClientChatComposing",       notify="notifyclientchatcomposing",       attributes=["clid", "cluid"] },
 	{ name="ClientEnterView",           notify="notifycliententerview",           attributes=["reasonid", "ctid", "invokerid?", "invokername?", "invokeruid?", "clid", "client_database_id", "client_nickname", "client_type", "cfid", "client_unique_identifier", "client_flag_avatar", "client_description", "client_icon_id", "client_input_muted", "client_output_muted", "client_outputonly_muted", "client_input_hardware", "client_output_hardware", "client_meta_data", "client_is_recording", "client_channel_group_id", "client_channel_group_inherited_channel_id", "client_servergroups", "client_away", "client_away_message", "client_talk_power", "client_talk_request", "client_talk_request_msg", "client_is_talker", "client_is_priority_speaker", "client_unread_messages", "client_nickname_phonetic", "client_needed_serverquery_view_power", "client_is_channel_commander", "client_country", "client_badges"] },
+	{ name="ClientIds",                 notify="notifyclientids",                 attributes=["cluid", "clid", "name"] },
 	{ name="ClientLeftView",            notify="notifyclientleftview",            attributes=["reasonmsg", "bantime?", "reasonid", "ctid", "invokerid?", "invokername?", "invokeruid?", "clid", "cfid"] },
 	{ name="ClientMoved",               notify="notifyclientmoved",               attributes=["clid", "reasonid", "ctid", "invokerid", "invokername", "invokeruid"] },
 	{ name="ClientNeededPermissions",   notify="notifyclientneededpermissions",   attributes=["permid", "permvalue"] },
@@ -267,11 +268,18 @@ msg = [
 	{ name="InitIvExpand2",             notify="initivexpand2",                   attributes=["l", "beta", "omega", "ot", "proof", "tvd"] },
 	{ name="InitServer",                notify="initserver",                      attributes=["virtualserver_welcomemessage", "virtualserver_platform", "virtualserver_version", "virtualserver_maxclients", "virtualserver_created", "virtualserver_hostmessage", "virtualserver_hostmessage_mode", "virtualserver_id", "virtualserver_ip", "virtualserver_ask_for_privilegekey", "acn", "aclid", "pv", "lt?", "client_talk_power", "client_needed_serverquery_view_power", "virtualserver_name", "virtualserver_codec_encryption_mode", "virtualserver_default_server_group", "virtualserver_default_channel_group", "virtualserver_hostbanner_url", "virtualserver_hostbanner_gfx_url", "virtualserver_hostbanner_gfx_interval", "virtualserver_priority_speaker_dimm_modificator", "virtualserver_hostbutton_tooltip", "virtualserver_hostbutton_url", "virtualserver_hostbutton_gfx_url", "virtualserver_name_phonetic", "virtualserver_icon_id", "virtualserver_hostbanner_mode", "virtualserver_channel_temp_delete_delay_default"] },
 	{ name="PluginCommand",             notify="notifyplugincmd",                 attributes=["name", "data"] },
-	{ name="PluginCommandRequest",      notify="plugincmd", s2c=false, c2s=true,  attributes=["name", "data", "targetmode_plugin" ] },
 	{ name="ServerEdited",              notify="notifyserveredited",              attributes=["invokerid", "invokername", "invokeruid", "reasonid", "virtualserver_name", "virtualserver_codec_encryption_mode", "virtualserver_default_server_group", "virtualserver_default_channel_group", "virtualserver_hostbanner_url", "virtualserver_hostbanner_gfx_url", "virtualserver_hostbanner_gfx_interval", "virtualserver_priority_speaker_dimm_modificator", "virtualserver_hostbutton_tooltip", "virtualserver_hostbutton_url", "virtualserver_hostbutton_gfx_url", "virtualserver_name_phonetic", "virtualserver_icon_id", "virtualserver_hostbanner_mode", "virtualserver_channel_temp_delete_delay_default" ] },
 	{ name="ServerGroupList",           notify="notifyservergrouplist",           attributes=["sgid", "name", "type", "iconid", "savedb", "sortid", "namemode", "n_modifyp", "n_member_addp", "n_member_remove_p?"] },
 	{ name="TextMessage",               notify="notifytextmessage",               attributes=["targetmode", "msg", "target", "invokerid", "invokername", "invokeruid"] },
 	{ name="TokenUsed",                 notify="notifytokenused",                 attributes=["token", "tokencustomset", "token1", "token2", "clid", "cldbid", "cluid"] },
+]
+
+# Client to Server Notifications
+[[msg_group]]
+default = { s2c=false, c2s=true, response=false, low=false, np=false }
+msg = [
+	{ name="GetClientIds",              notify="clientgetids",                    attributes=["cluid"] },
+	{ name="PluginCommandRequest",      notify="plugincmd",                       attributes=["name", "data", "targetmode_plugin"] },
 ]
 
 # Responses
