Added query/full commands to messages

--- a/MessagesToBook.toml
+++ b/MessagesToBook.toml
@@ -102,7 +102,7 @@ properties = [
 ]
 
 [[rule]]
-from = "ConnectionInfo"
+from = "ClientConnectionInfo"
 id = ["ClientId"]
 to = "ConnectionClientData"
 operation = "add"
