--- a/MessagesToBook.toml
+++ b/MessagesToBook.toml
@@ -117,6 +117,9 @@ to = "Client"
 operation = "update"
 properties = [
 	{ from="ServerGroupId", to="ServerGroups", operation="add" },
+	# We explicitely throw away the server group name.
+	# Otherwise it would overwrite our client name because of automated
+	# matching.
 	{ function="VoidFun", tolist=["Name"] },
 ]
 
