Make more things optional - is this right for ChannelCreated?

--- a/BookDeclarations.toml
+++ b/BookDeclarations.toml
@@ -57,22 +57,22 @@ properties = [
 	{ name="Id", type="ChannelId", set=false },
 	{ name="Parent", type="ChannelId", doc="0 means root channel" },
 	{ name="Name", type="str" },
-	{ name="Topic", type="str" },
-	{ name="Codec", type="Codec" },
-	{ name="CodecQuality", type="u8" },
-	{ name="MaxClients", type="u16", opt=true, doc="The maximum number of clients in the channel.\n\nNot set if it is unlimited." },
-	{ name="MaxFamilyClients", type="MaxFamilyClients", doc="Maximum number of clients in this and all child channels.\n\nNot set if it is unlimited." },
+	{ name="Topic", type="str", opt=true },
+	{ name="Codec", type="Codec", opt=true },
+	{ name="CodecQuality", type="u8", opt=true },
+	{ name="MaxClients", type="MaxClients", opt=true, doc="The maximum number of clients in the channel." },
+	{ name="MaxFamilyClients", type="MaxClients", opt=true, doc="Maximum number of clients in this and all child channels." },
 	{ name="Order", type="i32", doc="TODO Type of order?" },
 	{ name="ChannelType", type="ChannelType" },
-	{ name="IsDefault", type="bool", doc="Whether it is the default channel" },
-	{ name="HasPassword", type="bool", doc="Whether this channel has a password" },
-	{ name="CodecLatencyFactor", type="i32", doc="TODO Type?" },
+	{ name="IsDefault", type="bool", opt=true, doc="Whether it is the default channel" },
+	{ name="HasPassword", type="bool", opt=true, doc="Whether this channel has a password" },
+	{ name="CodecLatencyFactor", type="i32", opt=true, doc="TODO Type?" },
 	{ name="IsUnencrypted", type="bool" },
-	{ name="DeleteDelay", type="Duration" },
-	{ name="NeededTalkPower", type="i32" },
+	{ name="DeleteDelay", type="Duration", opt=true },
+	{ name="NeededTalkPower", type="i32", opt=true },
 	{ name="ForcedSilence", type="bool", set=false },
-	{ name="PhoneticName", type="str" },
-	{ name="IconId", type="IconHash" },
+	{ name="PhoneticName", type="str", opt=true },
+	{ name="IconId", type="IconHash", opt=true },
 	{ name="IsPrivate", type="bool" },
 	{ name="OptionalData", type="OptionalChannelData", opt=true, set=false },
 ]
