Invokerdata are optional when the server deletes a channel

--- a/MessagesToBook.toml
+++ b/MessagesToBook.toml
@@ -123,6 +123,12 @@ properties = [
 ]
 
 [[rule]]
+from = "ClientUpdated"
+id = ["ClientId"]
+to = "Client"
+operation = "update"
+
+[[rule]]
 from = "ServerGroupList"
 id = ["ServerGroupId"]
 to = "ServerGroup"
