--- a/BookDeclarations.toml
+++ b/BookDeclarations.toml
@@ -156,6 +156,7 @@ accessor = { get=true, set=true }
 properties = [
 	{ name="Id", type="ClientId", set=false },
 	{ name="Channel", type="ChannelId" },
+	# TODO replace by public key and add get_uid() method
 	{ name="Uid", type="Uid", set=false, doc="Unique Identifier" },
 	{ name="Name", type="str" },
 	{ name="InputMuted", type="bool", doc="`true` if muted, `false` otherwise" },
@@ -270,7 +271,7 @@ id = [
 doc = "Get in initserver"
 accessor = { get=true, set=false }
 properties = [
-	# TODO replace by public key
+	# TODO replace by public key and add get_uid() method
 	{ name="Uid", type="Uid", doc="UniqueIdentifier" },
 	{ name="VirtualServerId", type="u64", doc="The virtual server id" },
 	{ name="Name", type="str" },
