--- a/Messages.toml
+++ b/Messages.toml
@@ -470,7 +470,7 @@ default = { s2c=true, c2s=false, response=true, low=false, np=false }
 msg = [
 	{ name="BanList",                   notify="notifybanlist",                     attributes=["banid", "ip", "name", "uid", "lastnickname", "created", "duration@time", "invokercldbid", "invokername", "invokeruid", "reason", "enforcements"] },
 	{ name="ChannelClientPermList",     notify="notifychannelclientpermlist",       attributes=["cid", "cldbid", "permid?", "permsid?", "permvalue", "permnegated", "permskip"] },
-	{ name="ChannelCreated",            notify="notifychannelcreated",              attributes=["cid", "invokerid", "invokername", "invokeruid", "channel_order", "channel_name", "channel_topic?", "channel_flag_default?", "channel_flag_password?", "channel_flag_permanent?", "channel_flag_semi_permanent?", "channel_codec?", "channel_codec_quality", "channel_needed_talk_power?", "channel_icon_id?", "channel_maxclients?", "channel_maxfamilyclients?", "channel_codec_latency_factor?", "channel_codec_is_unencrypted", "channel_delete_delay?", "channel_flag_maxclients_unlimited?", "channel_flag_maxfamilyclients_unlimited?", "channel_flag_maxfamilyclients_inherited?", "channel_name_phonetic?", "cpid"] },
+	{ name="ChannelCreated",            notify="notifychannelcreated",              attributes=["cid", "invokerid", "invokername", "invokeruid", "channel_order", "channel_name", "channel_topic?", "channel_flag_default?", "channel_flag_password?", "channel_flag_permanent?", "channel_flag_semi_permanent?", "channel_codec?", "channel_codec_quality?", "channel_needed_talk_power?", "channel_icon_id?", "channel_maxclients?", "channel_maxfamilyclients?", "channel_codec_latency_factor?", "channel_codec_is_unencrypted?", "channel_delete_delay?", "channel_flag_maxclients_unlimited?", "channel_flag_maxfamilyclients_unlimited", "channel_flag_maxfamilyclients_inherited", "channel_name_phonetic?", "cpid"] },
 	{ name="ChannelDeleted",            notify="notifychanneldeleted",              attributes=["cid", "invokerid", "invokername", "invokeruid?"] },
 	{ name="ChannelEdited",             notify="notifychanneledited",               attributes=["cid", "invokerid?", "invokername?", "invokeruid?", "reasonid", "channel_order?", "channel_name?", "channel_topic?", "channel_flag_default?", "channel_flag_password?", "channel_flag_permanent?", "channel_flag_semi_permanent?", "channel_codec?", "channel_codec_quality?", "channel_needed_talk_power?", "channel_icon_id?", "channel_maxclients?", "channel_maxfamilyclients?", "channel_codec_latency_factor?", "channel_codec_is_unencrypted?", "channel_delete_delay?", "channel_flag_maxclients_unlimited?", "channel_flag_maxfamilyclients_unlimited?", "channel_flag_maxfamilyclients_inherited?", "channel_name_phonetic?", "cpid?"] },
 	{ name="ChannelGroupClientList",    notify="notifychannelgroupclientlist",      attributes=["cid", "cldbid", "cgid"] },
@@ -503,7 +503,7 @@ msg = [
 	{ name="ServerGroupPermList",       notify="notifyservergrouppermlist",         attributes=["sgid", "permid?", "permsid?", "permvalue", "permnegated", "permskip"] },
 	{ name="ServerGroupsByClientId",    notify="notifyservergroupsbyclientid",      attributes=["name", "sgid", "cldbid"] },
 	{ name="ServerLog",                 notify="notifyserverlog",                   attributes=["last_pos", "file_size", "l"] },
-	{ name="TextMessage",               notify="notifytextmessage",                 attributes=["targetmode@msg", "msg", "target", "invokerid", "invokername", "invokeruid"] },
+	{ name="TextMessage",               notify="notifytextmessage",                 attributes=["targetmode@msg", "msg", "target?", "invokerid", "invokername", "invokeruid"] },
 	{ name="TokenAdd",                  notify="notifytokenadd",                    attributes=["token"] },
 	{ name="TokenList",                 notify="notifytokenlist",                   attributes=["token", "token_type", "token_id1", "token_id2", "token_created", "token_description"] },
 ]
@@ -811,7 +811,7 @@ msg = [
 	{ name="Quit",                          notify="quit",                          attributes=[] },
 	# sendtextmessage targetmode=2 msg=hi
 	# -> {TextMessage} notifytextmessage targetmode=2 msg=hi invokerid=4 invokername=Splamy invokeruid=uA0U7t4PBxdJ5TLnarsOHQh4\/tY=
-	{ name="SendTextMessage",               notify="sendtextmessage",               attributes=["targetmode@msg", "target", "msg"] },
+	{ name="SendTextMessage",               notify="sendtextmessage",               attributes=["targetmode@msg", "target?", "msg"] },
 	# TODO
 	{ name="ServerCreate",                  notify="servercreate",                  attributes=["virtualserver_name"] }, # TODO PROPERTIES !
 	# TODO
