Fixed two notifications

--- a/Messages.toml
+++ b/Messages.toml
@@ -513,10 +513,10 @@ msg = [
 	{ name="ClientDbList",              notify="notifyclientdblist",                attributes=["cldbid", "client_unique_identifier", "client_nickname", "client_created", "client_lastconnected", "client_totalconnections", "client_description", "client_lastip"] },
 	{ name="ClientIds",                 notify="notifyclientids",                   attributes=["cluid", "clid", "name"] },
 	{ name="ClientNameFromDbId",        notify="notifyclientnamefromdbid",          attributes=["cluid", "cldbid", "name"] },
-	{ name="ClientNameFromUid",         notify="clientgetnamefromuid",              attributes=["cluid", "cldbid", "name"] },
+	{ name="ClientNameFromUid",         notify="notifyclientnamefromuid",           attributes=["cluid", "cldbid", "name"] },
+	{ name="ClientUidFromClid",         notify="notifyclientuidfromclid",           attributes=["cluid", "clid", "nickname"] },
 	{ name="ClientPermList",            notify="notifyclientpermlist",              attributes=["cldbid", "permid?", "permsid?", "permvalue", "permnegated", "permskip"] },
 	{ name="ClientSetServerQueryLogin", notify="notifyclientserverqueryloginpassword", attributes=["client_login_password"] },
-	{ name="ClientUidFromClid",         notify="clientgetuidfromclid",              attributes=["cluid", "clid", "nickname"] },
 	{ name="ComplainList",              notify="notifycomplainlist",                attributes=["tcldbid", "tname", "fcldbid", "fname", "message", "timestamp"] },
 	{ name="FileDownload",              notify="notifystartdownload",               attributes=["clientftfid", "serverftfid", "ftkey", "port", "size", "msg"] },
 	{ name="FileInfo",                  notify="notifyfileinfo",                    attributes=["cid", "path", "name", "size", "datetime"] },
